force-app/main/default/objects/vlocity_cmt__SystemInterface__c/vlocity_cmt__SystemInterface__c.object-meta.xml
<CustomObject>
    <description>Registration of an API (such as a web service) available from a given system for integrating with the system. Used by Order Management to register the fulfillment system APIs needed to drive fulfillment. Master-detail child object of System.</description>
    <label>System Interface</label>
    <nameField>
        <label>System Interface Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>System Interfaces</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>