force-app/main/default/objects/vlocity_cmt__SystemInterface__c/fields/vlocity_cmt__Path__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Path__c</fullName>
    <label>Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>