force-app/main/default/objects/vlocity_cmt__SystemInterface__c/fields/vlocity_cmt__Status__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
                <default>true</default>
                <label>Online</label>
            </value>
            <value>
                <fullName>Offline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>