force-app/main/default/objects/vlocity_cmt__SystemInterface__c/fields/vlocity_cmt__SystemId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__SystemId__c</fullName>
    <label>System</label>
    <referenceTo>vlocity_cmt__System__c</referenceTo>
    <relationshipLabel>System</relationshipLabel>
    <relationshipName>SystemInterfaces</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>